// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`active mode > bingo 1`] = `
<DocumentFragment>
  <script>
    !function(){try{var d=document.documentElement,c=d.classList;c.remove('light','dark');var e=localStorage.getItem('theme');if('system'===e||(!e&&true)){var t='(prefers-color-scheme: dark)',m=window.matchMedia(t);if(m.media!==t||m.matches){d.style.colorScheme = 'dark';c.add('dark')}else{d.style.colorScheme = 'light';c.add('light')}}else if(e){c.add(e|| '')}if(e==='light'||e==='dark')d.style.colorScheme=e}catch(e){}}()
  </script>
  <div
    class="css-8f2oos"
  >
    <p
      class="css-uok8h6"
    >
      Mode
    </p>
    <div
      class="css-12atwa6"
    >
      <a
        class="chakra-link chakra-link css-1oknjek"
        href="/swordless/en"
      >
        Bingo
      </a>
      <a
        class="chakra-link css-1eyxdc6"
        href="/score/swordless/en"
      >
        Score Attack
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`active mode > score attack 1`] = `
<DocumentFragment>
  <script>
    !function(){try{var d=document.documentElement,c=d.classList;c.remove('light','dark');var e=localStorage.getItem('theme');if('system'===e||(!e&&true)){var t='(prefers-color-scheme: dark)',m=window.matchMedia(t);if(m.media!==t||m.matches){d.style.colorScheme = 'dark';c.add('dark')}else{d.style.colorScheme = 'light';c.add('light')}}else if(e){c.add(e|| '')}if(e==='light'||e==='dark')d.style.colorScheme=e}catch(e){}}()
  </script>
  <div
    class="css-8f2oos"
  >
    <p
      class="css-uok8h6"
    >
      Mode
    </p>
    <div
      class="css-12atwa6"
    >
      <a
        class="chakra-link chakra-link css-27epf0"
        href="/firstQuest/en"
      >
        Bingo
      </a>
      <a
        class="chakra-link css-lb2u85"
        href="/score/firstQuest/en"
      >
        Score Attack
      </a>
    </div>
  </div>
</DocumentFragment>
`;
